Revision history for Locale-CA

0.06
	Fix synopsis syntax
	Map Ablt. to AB
	Fix http://www.cpantesters.org/cpan/report/147792c2-7b94-11ef-9c4f-aa1bc4b6c371

0.05	Sat Feb 25 10:35:03 EST 2023
	Include normalized strings
	Use _get_language from Lingua::Conjunction

0.04	Thu Jul 16 09:19:57 EDT 2020
	lang can be passed in as a parameter

0.03	Sun Jul 12 21:52:50 EDT 2020
	Added support for French

0.02 Mon Sep 28 10:35:37 EDT 2015
	Changed Quebec to QC, and added 'and Labrador' to
		Newfoundland

0.01	Sun Nov 18 18:17:09 EST 2012
	First draft