@@ -1,0 +1,46 @@
+---
+# https://github.com/codecov/example-perl/blob/master/github.yml
+name: Code coverage - codecov.io
+
+on:
+  pull_request:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    name: codecov
+    container:
+      image: perl:stable
+    steps:
+      - uses: actions/checkout@v4
+      - uses: codecov/codecov-action@v4
+      - name: Install Dependencies
+        run: |
+          cpanm --quiet --notest --installdeps .
+          cpanm --quiet --notest Module::Build Devel::Cover Devel::Cover::Report::Codecov
+      - name: Build module
+        run: |
+          perl Makefile.PL
+          make
+        env:
+          AUTHOR_TESTING: 1
+          AUTOMATED_TESTING: 1
+      # - name: Download codecov
+      #   run: |
+      #     Replace `linux` below with the appropriate OS
+      #     Options are `alpine`, `linux`, `macos`, `windows`
+      #     curl -Os https://uploader.codecov.io/latest/linux/codecov
+      #     chmod +x codecov
+      - name: Submit codecov
+        run: |
+          cover -test
+          cover -report codecov
+          # ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f cover_db/codecov.json
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          AUTOMATED_TESTING: 1
